apps/adguardhome/secondary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-secondary
  namespace: adguardhome
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "adguardhome-secondary"
    kube-vip.io/loadbalancerIPs: "${LAN_PREFIX}.102"
spec:
  type: LoadBalancer
  selector:
    app: adguardhome-secondary
  ports:
    - port: 53
      targetPort: 53
      protocol: UDP
      name: agh-s-dns
    - port: 53
      targetPort: 53
      protocol: TCP
      name: agh-s-dns-tcp
    - port: 1080
      targetPort: 80
      protocol: TCP
      name: agh-s-http
    - port: 10443
      targetPort: 443
      protocol: TCP
      name: agh-s-https
    - port: 10300
      targetPort: 3000
      protocol: TCP
      name: agh-s-ui
    - port: 10853
      targetPort: 853
      protocol: TCP
      name: agh-s-dns-tls
