apps/adguardhome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguardhome
  namespace: adguardhome
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "adguardhome"
    kube-vip.io/loadbalancerIPs: "${LAN_PREFIX}.2"
spec:
  type: LoadBalancer
  selector:
    app: adguardhome
  ports:
    - port: 53
      targetPort: 53
      protocol: UDP
      name: agh-dns
    - port: 53
      targetPort: 53
      protocol: TCP
      name: agh-dns-tcp
    - port: 1080
      targetPort: 80
      protocol: TCP
      name: agh-http
    - port: 10443
      targetPort: 443
      protocol: TCP
      name: agh-https
    - port: 10300
      targetPort: 3000
      protocol: TCP
      name: agh-ui
    - port: 10853
      targetPort: 853
      protocol: TCP
      name: agh-dns-tls
